@@ -7,7 +7,7 @@
     <parent>
         <groupId>one.microstream</groupId>
         <artifactId>microstream-integrations-parent</artifactId>
-        <version>07.01.01-MS-SNAPSHOT</version>
+        <version>07.01.01-MS-GA-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 	
@@ -17,8 +17,9 @@
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
     </properties>
-    
+
     <dependencies>
         <dependency>
             <groupId>jakarta.enterprise</groupId>
@@ -42,31 +43,25 @@
         <dependency>
             <groupId>one.microstream</groupId>
             <artifactId>microstream-storage-embedded</artifactId>
-            <version>07.01.01-MS-SNAPSHOT</version>
+            <version>07.01.01-MS-GA-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>one.microstream</groupId>
             <artifactId>microstream-storage-embedded-configuration</artifactId>
-            <version>07.01.01-MS-SNAPSHOT</version>
+            <version>07.01.01-MS-GA-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>one.microstream</groupId>
             <artifactId>microstream-configuration</artifactId>
-            <version>07.01.01-MS-SNAPSHOT</version>
+            <version>07.01.01-MS-GA-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>one.microstream</groupId>
             <artifactId>microstream-cache</artifactId>
-            <version>07.01.01-MS-SNAPSHOT</version>
+            <version>07.01.01-MS-GA-SNAPSHOT</version>
         </dependency>
 
         <!--Test-->
-        <dependency>
-            <groupId>org.jboss.weld.se</groupId>
-            <artifactId>weld-se-shaded</artifactId>
-            <version>3.1.8.Final</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>io.smallrye.config</groupId>
             <artifactId>smallrye-config</artifactId>
@@ -93,6 +88,34 @@
             <artifactId>mockito-junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.weld</groupId>
+            <artifactId>weld-junit5</artifactId>
+            <version>2.0.2.Final</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-    
+
+    <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-enforcer-plugin</artifactId>
+            <configuration>
+                <skip>true</skip>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${maven.surefire.plugin.version}</version>
+            <configuration>
+                <!-- testing is using some level stuff and mainly needed to pass on JDK 17 -->
+                <argLine>--illegal-access=permit</argLine>
+                <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+            </configuration>
+        </plugin>
+    </plugins>
+    </build>
+
 </project>
